# mathjax-svg-rs

./: .gitignore  Cargo.toml  README.md  build.rs  mise.toml
examples/: render_arg.rs
js/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rolldown.config.ts  vite.config.ts
js/patches/: @mathjax__src.patch
js/src/: bootstrap.ts  index.ts
src/: job_queue.rs  lib.rs
